Trying to fix alignment issue

--- a/stylesheets/_sass/_custom.sass
+++ b/stylesheets/_sass/_custom.sass
@@ -1,7 +1,9 @@
 #main
   nav ul
     a
-      font-size: 13px
+  font-size: 13px
+  text-align: inherit
+  display: inline
     &.side-nav li
       width: 100%
     li
